- tweak reflower - detect overflowing text and offer to fix it
git-svn-id: https://svn.apache.org/repos/asf/comdev/reporter.apache.org/trunk@1864244 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/wizard/css/wizard.css
+++ b/site/wizard/css/wizard.css
@@ -275,9 +275,17 @@
  font-size: 0.9rem !important;
 }
 
+#unified-reflow {
+ width: 540px;
+ height: 20px;
+ font-size: 11px;
+ 
+}
+
+
 #unified-report {
  width: 540px;
- height: 590px;
+ height: 570px;
  font-size: 11px;
 }
 
